--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -9,6 +9,10 @@
       <li><i class="icon-user"></i>
         <%= answer.linked_username %>
       </li>
+      <li>
+        <%= answer.evaluation_content_tag_i %>
+        <%= answer.evaluation %>
+      </li>
     </ul>
     <%= answer.description_format %>
   </div>
