--- a/app/views/layouts/application_new.html.erb
+++ b/app/views/layouts/application_new.html.erb
@@ -14,7 +14,7 @@
   <!-- STATIC-BANNER -->
 
   <div id="content">
-    <div class="container"> 
+    <div class="container">
       <%= yield %>
     </div>
   </div>
@@ -23,7 +23,7 @@
   <%= render("shared/footer_new") %>
   <!-- FOOTER -->
 
-  <!-- @todo: remove unused Javascript for better performance --> 
-  <%= javascript_include_tag "application_new" %>
+  <!-- @todo: remove unused Javascript for better performance -->
+  <%= javascript_include_tag "application" %>
 </body>
 </html>
