--- a/app/views/notification_mailer/answer.html.erb
+++ b/app/views/notification_mailer/answer.html.erb
@@ -5,8 +5,8 @@
 <p>Prezado <%= @question.requester_name%>, Sua pergunta <%= @question.title %> recebeu uma resposta de <strong><%= @answer.user.username%></strong>:
 	<%= simple_format(@answer.description) %>
 
-<p><%= link_to "ESSA RESPOSTA ME AJUDOU", useful_answer_url(@answer.hashed_code) %></p>
-<p><%= link_to "NÃO GOSTEI DA RESPOSTA", useless_answer_url(@answer.hashed_code) %></p>
+<p><%= link_to "ESSA RESPOSTA ME AJUDOU", useful_question_answer_url(@question, @answer.hashed_code) %></p>
+<p><%= link_to "NÃO GOSTEI DA RESPOSTA", useless_question_answer_url(@question, @answer.hashed_code) %></p>
 
 <p>
 	<strong>Equipe Alik</strong><br>
