--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,10 +1,12 @@
 <% title t(".title") %>
-<%= simple_form_for [@question, @answer], html: { class: "form-horizontal" } do |f| %>
-  <%= f.input :description, input_html: {rows: "10"}, :hint => "Responda essa pergunta, e deixe a sua resposta ser avaliada.", :placeholder => "Sua Resposta" %>
-  
+
+<%= simple_form_for [@question, @answer] do |f| %>
+  <h3 class="title-divider"><span>Nova Resposta</span></h3>
+
+  <%= f.input :description, :as => :text, input_html: { class: "input-block-level", rows: "10" }, label: false, :hint => "Responda essa pergunta, e deixe a sua resposta ser avaliada." %>
+
   <div class="form-actions">
-    <%= f.button :submit, :class => "secondary button" %>
-		ou
-		<%= link_to "Cancelar", root_path %>
+    <%= f.button :submit,  :class => "secondary button" %> ou
+    <%= link_to "Cancelar", root_path %>
   </div>
 <% end %>
