--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="Ernane Sena">
 
-<%= stylesheet_link_tag "application_new", media: "all" %>
+<%= stylesheet_link_tag "application", media: "all" %>
 <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:400,700,300|Rambla|Calligraffitti" %>
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
