--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,7 +8,7 @@
 			<%= render question %>
   	<% end %>
    <div class="flickr_pagination">
-     <%= will_paginate @questions %>
+     <%= paginate @questions %>
    </div>
   </div>
   <%= render "sidebar" %>
