--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -4,11 +4,9 @@
       <div class="input-append">
           <%= form_tag search_questions_path, method: :get do %>
             <div class="field">
-              <%= text_field_tag :search, params[:search] %>
-              <%= submit_tag "Search", name: nil %>
+              <%= text_field_tag :search, params[:search], class: "span2", id: "appendedInputButton", placeholder: "Busca" %>
+              <%= submit_tag "Buscar", name: nil, class: "btn" %>
           <% end %>
-          <!-- <input class="span2" id="appendedInputButton" type="text" placeholder="Search">
-          <button class="btn" type="button">Go!</button> -->
       </div>
     </div>
     <div class="block">
