--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -50,7 +50,12 @@
 
           <!--main navigation-->
           <ul class="nav" id="main-menu">
-            <li class="home-link"><a href="index.htm"><i class="icon-home hidden-phone"></i><span class="visible-phone">Home</span></a></li>
+            <li class="home-link">
+              <%= link_to root_path do %>
+                <i class="icon-home hidden-phone"></i>
+                <span class="visible-phone">Home</span>
+              <% end %>
+            </li>
             <li class="dropdown"><a href="features.htm" class="dropdown-toggle menu-item" id="features-drop" data-toggle="dropdown">Features +</a>
               <!-- Dropdown Menu -->
               <ul class="dropdown-menu mega-menu" role="menu" aria-labelledby="features-drop">
