--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -32,7 +32,7 @@
     </div>
   <% end %>
     <div class="flickr_pagination">
-      <%= will_paginate @questions %>
+      <%= paginate @questions %>
     </div>
   </div>
   <%= render "sidebar" %>
