--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -12,34 +12,30 @@
     <div class="block">
       <h4 class="title-divider"><span>Tags</span></h4>
       <div class="tag-cloud">
-      	<span><a href="#">Administrativo</a> (97)</span>
-      	<span><a href="#">Ambiental</a> (77)</span>
-      	<span><a href="#">Bancário</a> (75)</span>
-      	<span><a href="#">Civil</a> (56)</span>
-      	<span><a href="#">Consumidor</a> (65)</span>
-      	<span><a href="#">Econômico</a> (70)</span>
-      	<span><a href="#">Eleitoral</a> (54)</span>
-      	<span><a href="#">Eletrônico</a> (97)</span>
-      	<span><a href="#">Financeiro</a> (77)</span>
-      	<span><a href="#">Judiciário</a> (75)</span>
-      	<span><a href="#">Militar</a> (56)</span>
-      	<span><a href="#">Penal</a> (65)</span>
-      	<span><a href="#">Trabalho</a> (70)</span>
-      	<span><a href="#">Urbanístico</a> (54)</span>
+      	<span><a href="#">Administrativo</a> (0)</span>
+      	<span><a href="#">Ambiental</a> (0)</span>
+      	<span><a href="#">Bancário</a> (0)</span>
+      	<span><a href="#">Civil</a> (0)</span>
+      	<span><a href="#">Consumidor</a> (0)</span>
+      	<span><a href="#">Econômico</a> (0)</span>
+      	<span><a href="#">Eleitoral</a> (0)</span>
+      	<span><a href="#">Eletrônico</a> (0)</span>
+      	<span><a href="#">Financeiro</a> (0)</span>
+      	<span><a href="#">Judiciário</a> (0)</span>
+      	<span><a href="#">Militar</a> (0)</span>
+      	<span><a href="#">Penal</a> (0)</span>
+      	<span><a href="#">Trabalho</a> (0)</span>
+      	<span><a href="#">Urbanístico</a> (0)</span>
       </div>
     </div>
     <div class="block">
       <h4 class="title-divider"><span>Archive</span></h4>
       <ul class="big-list tags">
-        <li><a href="#">Janeiro 2013</a> (19)</li>
-        <li><a href="#">Dezembro 2012</a> (0)</li>
-        <li><a href="#">Novembro 2012</a> (39)</li>
-        <li><a href="#">Outubro 2012</a> (20)</li>
-        <li><a href="#">Setembro 2012</a> (56)</li>
-        <li><a href="#">Agosto 2012</a> (49)</li>
-        <li><a href="#">Julho 2012</a> (90)</li>
+        <li><a href="/">Março 2013</a> (0)</li>
+        <li><a href="/">Fevereiro 2013</a> (0)</li>
+        <li><a href="/">Janeiro 2013</a> (0)</li>
       </ul>
     </div>
-    <div class="block"> <a href="#" class="btn btn-warning"><i class="icon-rss"></i> Subscribe via RSS feed</a> </div>
+    <div class="block"> <a href="/" class="btn btn-warning"><i class="icon-rss"></i> Inscreva-se via RSS feed</a> </div>
   </div>
 </div>
