--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <!--@todo: replace with company copyright details-->
       <div class="subfooter">
         <div class="span6">
-          <p>Site template by <a href="#">AppStrap</a> | Copyright 2012 &copy; AppStrap</p>
+          <p>Alik <a href="/"> | Conselhos de Especialistas Quando Você Mais Precisa</a> | Copyright 2013 &copy;</p>
         </div>
       </div>
     </div>
