--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,5 +1,17 @@
 <% if user_signed_in? %>
-  <li><%= link_to "Logout", destroy_user_session_path, method:  :delete, class: "btn login" %></li>
+<li class="dropdown"><a href="pages.htm" class="dropdown-toggle" id="pages-drop" data-toggle="dropdown"><%= current_user.username %> +</a>
+  <!-- Dropdown Menu -->
+  <ul class="dropdown-menu pull-left" role="menu" aria-labelledby="pages-drop">
+    <li role="menuitem"><a href="login.htm" tabindex="-1" class="menu-item">Login</a></li>
+    <li class="divider"></li>
+    <li role="menuitem"><a href="login.htm" tabindex="-1" class="menu-item">Login</a></li>
+    <li class="divider"></li>
+    <li role="menuitem"><a href="login.htm" tabindex="-1" class="menu-item">Login</a></li>
+    <li class="divider"></li>
+    <li role="menuitem"><a href="login.htm" tabindex="-1" class="menu-item">Login</a></li>
+  </ul>
+</li>
+  <li><%= link_to "Sair", destroy_user_session_path, method:  :delete, class: "btn login" %></li>
 <% else %>
   <li><%= link_to "Cadastro", new_user_registration_path, class: "btn signup" %></li>
   <li><%= link_to "Login", new_user_session_path, class: "btn login" %></li>
