--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -56,9 +56,9 @@
                 <span class="visible-phone">Home</span>
               <% end %>
             </li>
-            <li><%= link_to "Quem Somos", root_path %></li>
+            <li><%= link_to "Quem Somos", sobre_path %></li>
             <li><%= link_to "Blog", root_path %></li>
-            <li><%= link_to "Contato", root_path %></li>
+            <li><%= link_to "Contato", new_contact_path %></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
