--- a/app/views/site/sobre.html.erb
+++ b/app/views/site/sobre.html.erb
@@ -1,111 +1,106 @@
-<% title t(".title") %>
+<div class="row">
+	<div class="span9">
+		<h1>ALIK</h1>
+		<p>
+			ALIK tem a missão de ajudar as pessoas a tomarem as melhores decisões
+			na hora de escolher um advogado. Normalmente essa escolha é feita em um
+			momento difícil da vida e baseada em indicações de pessoas próximas, cujo
+			universo de informação é bastante limitado.
+		</p>
 
-<% content_for :sidebar do %>
-  <%= render("shared/sidebar") %>
-<% end %>
+		<p>
+			Encontrar um advogado é fácil. Existem pelo menos 600.000 deles atuando
+			no país. Difícil é achar o profissional certo para sua causa. Um erro na
+			escolha pode significar prejuízos e muita dor de cabeça. Como acontece na
+			contratação de outros tipos de serviço, cabe ao cliente selecionar o profissional
+			e acompanhar o trabalho que ele vai realizar.
+		</p>
 
-<article id="about">
+		<p>
+			Mas o mundo jurídico é complexo e envolve conhecimentos sobre uma
+			infinidade de assuntos, o que normalmente deixa o cliente completamente
+			indeciso.
+		</p>
 
-<h1><%= t(".container_title") %></h1>
+		<p>
+			Por isso, ALIK desenvolveu uma ferramenta, a CLASSIFICAÇÃO ALIK,
+			para auxiliar o publico leigo a encontrar o advogado ideal para solucionar seus
+			problemas com a maior segurança.
+		</p>
 
-<p>
-	ALIK tem a missão de ajudar as pessoas a tomarem as melhores decisões
-na hora de escolher um advogado. Normalmente essa escolha é feita em um
-momento difícil da vida e baseada em indicações de pessoas próximas, cujo
-universo de informação é bastante limitado.
-</p>
+		<p>
+			Através da CLASSIFICAÇÃO ALIK é possível avaliar de forma rápida e
+			fácil, a experiência e realizações profissionais do advogado, seu histórico
+			disciplinar, seus diplomas e qualificações.
+		</p>
 
-<p>
-	Encontrar um advogado é fácil. Existem pelo menos 600.000 deles atuando
-no país. Difícil é achar o profissional certo para sua causa. Um erro na
-escolha pode significar prejuízos e muita dor de cabeça. Como acontece na
-contratação de outros tipos de serviço, cabe ao cliente selecionar o profissional
-e acompanhar o trabalho que ele vai realizar.
-</p>
+		<p>
+			A pagina de cadastro de cada advogado registrará também as avaliações de
+			clientes para os quais prestaram algum serviço jurídico e recomendações de
+			colegas advogados que tiveram a oportunidade de conhecer de perto o seu
+			trabalho, como uma forma de conceituar os bons advogados e, com isso,
+			facilitar a escolha do melhor jurista para cuidar da sua causa.
+		</p>
 
-<p>
-	Mas o mundo jurídico é complexo e envolve conhecimentos sobre uma
-infinidade de assuntos, o que normalmente deixa o cliente completamente
-indeciso.
-</p>
+		<p>
+			Pode ser a opinião de um cliente que já teve um problema judicial e foi
+			bem-sucedido; se recebeu bom atendimento e se o preço cobrado foi o
+			combinado; se o advogado explicou o problema de maneira compreensível e o
+			manteve informado sobre o andamento do processo. Todas essas questões são
+			importantes para escolha do advogado que defenderá sua causa.
+		</p>
 
-<p>
-	Por isso, ALIK desenvolveu uma ferramenta, a CLASSIFICAÇÃO ALIK,
-para auxiliar o publico leigo a encontrar o advogado ideal para solucionar seus
-problemas com a maior segurança.
-</p>
+		<p>
+			Além disso, antes de tomar sua decisão, o consumidor tem a possibilidade de
+			receber orientação profissional especializada de forma gratuita, por meio de
+			perguntas, que serão respondidas pelos advogados.
+		</p>
 
-<p>
-	Através da CLASSIFICAÇÃO ALIK é possível avaliar de forma rápida e
-fácil, a experiência e realizações profissionais do advogado, seu histórico
-disciplinar, seus diplomas e qualificações.
-</p>
-
-<p>
-	A pagina de cadastro de cada advogado registrará também as avaliações de
-clientes para os quais prestaram algum serviço jurídico e recomendações de
-colegas advogados que tiveram a oportunidade de conhecer de perto o seu
-trabalho, como uma forma de conceituar os bons advogados e, com isso,
-facilitar a escolha do melhor jurista para cuidar da sua causa.
-</p>
-
-<p>
-	Pode ser a opinião de um cliente que já teve um problema judicial e foi
-bem-sucedido; se recebeu bom atendimento e se o preço cobrado foi o
-combinado; se o advogado explicou o problema de maneira compreensível e o
-manteve informado sobre o andamento do processo. Todas essas questões são
-importantes para escolha do advogado que defenderá sua causa.
-</p>
-
-<p>
-	Além disso, antes de tomar sua decisão, o consumidor tem a possibilidade de
-receber orientação profissional especializada de forma gratuita, por meio de
-perguntas, que serão respondidas pelos advogados.
-</p>
-
-<p>
-	Por fim, esclarecemos que a ALIK está em constante crescimento, de modo
-	que se você tiver ideias, sugestões, ou até mesmo críticas, gostaríamos de
-	ouvi-las. Sinta-se a vontade para enviar-nos comentários a qualquer momento.
-</p>
+		<p>
+			Por fim, esclarecemos que a ALIK está em constante crescimento, de modo
+			que se você tiver ideias, sugestões, ou até mesmo críticas, gostaríamos de
+			ouvi-las. Sinta-se a vontade para enviar-nos comentários a qualquer momento.
+		</p>
 
 
-<h1>Nossa História</h1>
+		<h1>Nossa História</h1>
 
-<p>Atualmente, a globalização é uma realidade cada vez mais presente em
-nosso cotidiano e, com isso, passamos a dispor de ferramentas úteis que
-nos auxiliam a escolher rapidamente os melhores produtos e serviços de um
-determinado ramo a fim de dar rápida vazão a nossas necessidades.</p>
+		<p>Atualmente, a globalização é uma realidade cada vez mais presente em
+			nosso cotidiano e, com isso, passamos a dispor de ferramentas úteis que
+			nos auxiliam a escolher rapidamente os melhores produtos e serviços de um
+			determinado ramo a fim de dar rápida vazão a nossas necessidades.</p>
 
-<p>Contudo, mesmo com a informatização crescente nos meios de comunicação,
-somos constantemente procurados por clientes e amigos pedindo-nos
-indicação de advogados.</p>
+		<p>Contudo, mesmo com a informatização crescente nos meios de comunicação,
+			somos constantemente procurados por clientes e amigos pedindo-nos
+			indicação de advogados.</p>
 
-<p>Por que tantas pessoas estão tendo dificuldades em contratar um advogado?
-Afinal, no Brasil, até 2011, existiam aproximadamente 1200 cursos de Direito
-e estima-se que estejam matriculados, do primeiro ao quinto ano, cerca de
-650 mil estudantes. Em média, 100 mil bacharéis se formam todo ano em
-Direito. A despeito do duro crivo da OAB, 40.000 novos advogados invadem
-o mercado a cada ano e já se contabiliza em torno de 600.000 (pasmem, mais
-de meio milhão) de advogados praticantes.</p>
+		<p>Por que tantas pessoas estão tendo dificuldades em contratar um advogado?
+			Afinal, no Brasil, até 2011, existiam aproximadamente 1200 cursos de Direito
+			e estima-se que estejam matriculados, do primeiro ao quinto ano, cerca de
+			650 mil estudantes. Em média, 100 mil bacharéis se formam todo ano em
+			Direito. A despeito do duro crivo da OAB, 40.000 novos advogados invadem
+			o mercado a cada ano e já se contabiliza em torno de 600.000 (pasmem, mais
+			de meio milhão) de advogados praticantes.</p>
 
-<p>Constatamos que era exatamente por isso os consumidores estavam perdidos
-e desnorteados. Com essa profusão de profissionais e nenhum critério de
-escolha, de fato, fica muito difícil para um leigo contratar o advogado certo
-para o seu caso.</p>
+		<p>Constatamos que era exatamente por isso os consumidores estavam perdidos
+			e desnorteados. Com essa profusão de profissionais e nenhum critério de
+			escolha, de fato, fica muito difícil para um leigo contratar o advogado certo
+			para o seu caso.</p>
 
-<p>Por isso, decidimos que tinha que ser criada uma ferramenta que permitisse
-ao consumidor uma escolha mais consciente do profissional que defenderia
-seus direitos, mesmo porque uma decisão dessa natureza não pode ser
-tomada apenas baseada em anúncios pagos pelos advogados de melhor
-poder aquisitivo. Para se defender é essencial contar com um profissional
-competente, coisa que só um diploma não garante.</p>
+		<p>Por isso, decidimos que tinha que ser criada uma ferramenta que permitisse
+			ao consumidor uma escolha mais consciente do profissional que defenderia
+			seus direitos, mesmo porque uma decisão dessa natureza não pode ser
+			tomada apenas baseada em anúncios pagos pelos advogados de melhor
+			poder aquisitivo. Para se defender é essencial contar com um profissional
+			competente, coisa que só um diploma não garante.</p>
 
-<p>Com esse propósito em mente, reunimos nossa equipe e, agregando outros
-	profissionais e consultores, passamos a um exaustivo trabalho de análise
-	e juntos criamos a CLASSIFICAÇÃO ALIK para auxiliar o consumidor a
-	avaliar a atuação dos advogados no Brasil.
-</p>
+		<p>Com esse propósito em mente, reunimos nossa equipe e, agregando outros
+			profissionais e consultores, passamos a um exaustivo trabalho de análise
+			e juntos criamos a CLASSIFICAÇÃO ALIK para auxiliar o consumidor a
+			avaliar a atuação dos advogados no Brasil.
+		</p>
 
-<p>Dessa forma nasceu ALIK.</p>
-</article>
+		<p>Dessa forma nasceu ALIK.</p>
+	</div>
+	<%= render "sidebar" %>
+</div>
