Aplicacão do Blog

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,9 @@
 <div class="row-fluid">
-	<h2 class="title-divider"><span>Company <span class="de-em">Blog</span></span> <small><a href="blog.htm"><i class="icon-arrow-left"></i> Back to Blog</a></small></h2>
+	<h2 class="title-divider">
+		<small>
+			<a href="/"><i class="icon-arrow-left"></i> Todas Perguntas</a>
+		</small>
+	</h2>
 </div>
 <div class="row">
 	<!--Main Content-->
