--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -57,7 +57,7 @@
               <% end %>
             </li>
             <li><%= link_to "Quem Somos", sobre_path %></li>
-            <li><%= link_to "Blog", root_path %></li>
+            <li><%= link_to "Blog", blog_articles_path %></li>
             <li><%= link_to "Contato", new_contact_path %></li>
           </ul>
         </div>
