Alteração Titulo Blog

--- a/app/views/blog/articles/index.html.erb
+++ b/app/views/blog/articles/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row-fluid">
-  <h2 class="title-divider"><span>Últimas <span class="de-em">Perguntas</span></span></h2>
+  <h2 class="title-divider">
+    <span>Alik <span class="de-em">Blog</span></span>
+  </h2>
 </div>
 <div class="row">
   <!--Blog Roll Content-->
