--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,5 +26,6 @@
 
   <!-- @todo: remove unused Javascript for better performance -->
   <%= javascript_include_tag "application" %>
+  <%= analytics "UA-32025057-1" %>
 </body>
 </html>
